# IAmMad

./: README.md
src/: CMakeLists.txt  diff.cpp  diff.h  params.h  parse.h  simplify.h  tree.h
src/include/: params.h  simplify.h  tree.h
src/tests/: diff.cpp
